--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,19 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+.grid {
+  display: flex;
+ }
+.col-1-2 {
+  flex: 1;
+}
+.cole-1-2:last-child {
+  margin-left: 20px;
+}
+.col-md-12 {
+  flex: 1;
+}
+.col-md-12:last-child {
+  margin-left: 20px;
+}
