Made CV have collapsible sections.

--- a/css/styles.css
+++ b/css/styles.css
@@ -169,6 +169,7 @@ li .fa, li .fab {
 /* Experience & Education */
 
 .education ol,
+.content ol,
 .experience ol {
     margin: 0;
     padding: 0;
@@ -196,6 +197,7 @@ li .fa, li .fab {
 }
 
 .education ol > li div,
+.content ol > li div,
 .experience ol > li header {
     display: flex;
     flex-direction: row;
@@ -203,6 +205,7 @@ li .fa, li .fab {
 
 .experience ol > li > span,
 .education ol > li p,
+.content ol > li p,
 .experience ol > li header p {
     font-weight: 400;
 }
@@ -212,6 +215,7 @@ li .fa, li .fab {
 }
 
 .education ol > li div > *:last-child,
+.content ol > li div > *:last-child,
 .experience ol > li header > *:last-child {
     margin-left: auto;
 }
@@ -223,4 +227,34 @@ li .fa, li .fab {
 .experience ol > li ul li {
     list-style-type: circle;
     margin-left: 1.618em;
+}
+
+.collapsible {
+  background-color:rgb(84, 153, 199);
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 20px;
+}
+
+.active {
+  background-color:rgba(52, 73, 94, 0.75);
+  color:white;
+}
+
+.collapsible:hover {
+  background-color:rgba(52, 73, 94, 0.5);
+  color:white;
+}
+
+
+.content {
+  padding: 0px;
+  display: none;
+  overflow: visible;
+  background-color:white;
 }
