--- a/css/screen.css
+++ b/css/screen.css
@@ -47,8 +47,7 @@ button {
 
 button {
 	box-shadow:inset 0px 1px 0px 0px white;
-	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
-	background-color:#ededed;
+	background-color:#000066;
 	border-radius:6px;
 	border:1px solid #dcdcdc;
 	display:inline-block;
@@ -61,10 +60,14 @@ button {
 	text-shadow:0px 1px 0px white;
 }
 
-button:hover, button:active {
-	background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
-	background-color:#dfdfdf;
+button:hover {
+	background-color:rgba(52, 73, 94, 0.5);
 }
+
+button:active {
+	background-color:rgba(52, 73, 94, 0.75);
+}
+
 
 button:active {
 	position:relative;
