--- a/css/styles.css
+++ b/css/styles.css
@@ -230,7 +230,7 @@ li .fa, li .fab {
 }
 
 .collapsible {
-  background-color:rgb(84, 153, 199);
+  background-color:rgb(0, 140, 186);
   color: white;
   cursor: pointer;
   padding: 10px;
@@ -239,18 +239,33 @@ li .fa, li .fab {
   text-align: left;
   outline: none;
   font-size: 20px;
+  font-weight: 500;
 }
 
 .active {
-  background-color:rgba(52, 73, 94, 0.75);
-  color:white;
+  background-color:white;
+  color:black;
+  border: 2px solid rgb(0, 140, 186);
 }
 
 .collapsible:hover {
-  background-color:rgba(52, 73, 94, 0.5);
-  color:white;
+  background-color:white;
+  color:black;
+  border: 2px solid rgb(0, 140, 186);
 }
 
+.active:hover {
+  background-color:rgb(0, 140, 186);
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 20px;
+  font-weight: 500;
+}
 
 .content {
   padding: 0px;
@@ -258,3 +273,45 @@ li .fa, li .fab {
   overflow: visible;
   background-color:white;
 }
+
+
+.mybutton {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.mybutton span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.mybutton span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.mybutton:hover span {
+  padding-right: 25px;
+}
+
+.mybutton:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
