--- a/css/main.css
+++ b/css/main.css
@@ -57,3 +57,32 @@ ul.posts li {
 .col-md-12:last-child {
   margin-left: 20px;
 }
+
+.column {
+  float: left;
+  width: 50%;
+}
+
+.tri-column {
+  float: left;
+  width: 33.33%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .tri-column {
+    width: 100%;
+  }
+
+  .column {
+    width: 100%;
+  }
+}
+
