--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,14 +2,21 @@
 <html>
   <head>
     <title>{{ page.title }} | {{ site.title  }}</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <meta name="google" content="notranslate" />
     <!-- link to main stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="../css/typography.css" />
   </head>
   <body>
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/research">Research</a></li>
+        <li><a href="/publications">Publications</a></li>
         <li><a href="/cv">CV</a></li>
       </ul>
     </nav>
@@ -20,8 +27,8 @@
     </div><!-- /.container -->
     <footer>
     <ul>
-      <li><a href="mailto:dsondak@gmail.com">email</a></li>
-      <li><a href="https://github.com/dsondak">github.com/dsondak</a></li>
+      <li><a href="mailto:dsondak@seas.harvard.edu">email:  dsondak@seas.harvard.edu</a></li>
+      <li><a href="https://github.com/dsondak">github:  github.com/dsondak</a></li>
     </ul>
     </footer>
   </body>
