--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,18 @@ p {
 }
 footer {
     border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+}
+
+nav {
+    border-bottom: 1px solid #d5d5d5;
+}
+.fa, .fab {
+    text-align: center;
+    min-width: 1em;
+}
+
+li .fa, li .fab {
+    margin-right: 0.3em;
 }
 
 ul.posts { 
