--- a/css/screen.css
+++ b/css/screen.css
@@ -3,11 +3,15 @@ html {
 }
 
 .sheet {
-    border: 1px solid black;
+    border: 0px solid black;
 }
 
 #save > section:first-of-type > aside {
-    background-color: #f5f5f5;
+    /**background-color: #f5f5f5;**/
+    background-color: white;
+    border-right-width: 3px;
+    border-right-style: solid;
+    border-right-color: rgba(119, 119, 119, .5);
 }
 
 #save > section:first-of-type aside .skills > ul > li > span {
