Website infrastructure essentially done.
Need to include some links in the footnotes, a link to the PDF version of the CV, complete the research descriptions, and
finish up the preambles to the Publications and Research Projects pages.

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,13 +23,13 @@ p:-moz-only-whitespace, li:-moz-only-whitespace, div:-moz-only-whitespace, secti
 
 :root {
     --main-width: 74%;
-    --header-height: 1.2in;
     --sidebar-width: calc(100% - var(--main-width));
 }
 
+/**
 body {
     font-size: 1em;
-    margin: 0 auto;
+    margin: 60px auto;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
@@ -38,6 +38,12 @@ body {
     text-rendering: optimizeLegibility;
     text-decoration-skip: ink;
     hyphens: auto;
+    width: 70%;
+}
+**/
+body {
+    margin: 60px auto;
+    width: 70%;
 }
 
 #save > section:first-of-type {
@@ -58,6 +64,10 @@ nav ul li, footer ul li {
     margin-right: 20px;
 }
 
+nav {
+    border-bottom: 1px solid #d5d5d5;
+}
+
 img {
     max-width: 100%;
 }
@@ -67,15 +77,25 @@ p {
     margin-bottom: 0;
 }
 
+a {
+    text-decoration: none;
+    color: #999;
+}
+a:hover {
+    text-decoration: underline;
+}
+
 abbr[title] {
     text-decoration: none;
     border: none;
 }
 
+/**
 ul {
     margin: 0;
     padding: 0;
 }
+**/
 
 li {
     list-style-type: none;
@@ -105,11 +125,9 @@ li .fa, li .fab {
     flex-direction: column;
 }
 
-/**
 #save > section:first-of-type > aside > section + section {
     margin-top: 2em;
 }
-**/
 
 #save > section:first-of-type > aside > section:last-child {
     margin-top: auto;
@@ -283,7 +301,7 @@ li .fa, li .fab {
   cursor: pointer;
   padding: 10px;
   width: 100%;
-  height: 2%;
+  height: 7%;
   border: none;
   text-align: left;
   outline: none;
@@ -299,7 +317,7 @@ li .fa, li .fab {
   cursor: pointer;
   padding: 10px;
   width: 100%;
-  height: 2%;
+  height: 7%;
   border: none;
   text-align: left;
   outline: none;
@@ -315,7 +333,7 @@ li .fa, li .fab {
   border: 2px solid rgb(0, 140, 186);
   padding: 10px;
   width: 100%;
-  height: 2%;
+  height: 7%;
   text-align: left;
   outline: none;
   font-size: 1.7rem;
@@ -339,7 +357,7 @@ li .fa, li .fab {
   cursor: pointer;
   padding: 10px;
   width: 100%;
-  height: 2%;
+  height: 7%;
   text-align: left;
   outline: none;
   font-size: 1.7rem;
