Added links to foot notes and fixed CV aside margin.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
     <ul>
       <li><a href="mailto:dsondak@seas.harvard.edu">email:  dsondak@seas.harvard.edu</a></li>
       <li><a href="https://github.com/dsondak">github:  github.com/dsondak</a></li>
-      <li><a href="https://google.com/scholar">google scholar</a></li>
-      <li><a href="https://github.com/dsondak">office:  Maxwell-Dworkin G111</a></li>
+      <li><a href="https://scholar.google.com/citations?user=ZYhKK1wAAAAJ&hl=en">google scholar</a></li>
+      <li><a href="https://goo.gl/maps/RYDWryHmctRp1RQ6A">office:  Maxwell-Dworkin G111</a></li>
     </ul>
     </footer>
   </body>
