--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,11 @@ img[alt=Picture description] { width: 200px; }
     width: 300px;
 }
 
+.research-image-size
+{
+    width: 500px;
+}
+
 /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   .tri-column {
