Updating colors of CV buttons.

--- a/css/main.css
+++ b/css/main.css
@@ -61,11 +61,18 @@ ol.a {
   display: flex;
  }
 
-.col-md-12 {
-  flex: 1;
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
-.col-md-12:last-child {
-  margin-left: -200px;
+
+.col-md-12 {
+ /* flex: 1; */
+ float: left;
+ width: 50%;
+ padding: 10px;
 }
 
 img[src*='#left'] {
@@ -99,12 +106,9 @@ img[alt=Picture description] { width: 200px; }
 
 /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  .tri-column {
+  .col-md-12 {
     width: 100%;
   }
 
-  .column {
-    width: 100%;
-  }
 }
 
