--- a/css/styles.css
+++ b/css/styles.css
@@ -297,35 +297,40 @@ li .fa, li .fab {
 }
 
 .collapsible {
-  background-color:rgb(0, 140, 186);
-  color: white;
+  /*background-color:rgb(0, 140, 186);*/
+  /*color: white;*/
+  background-color:white;
+  color:black;
   cursor: pointer;
   padding: 10px;
   width: 100%;
   height: 7%;
-  border: none;
+  border: 2px solid;
   text-align: left;
   outline: none;
-  font-size: 1.7rem;
-  font-weight: 500;
-  letter-spacing: -.05rem;
-  line-height: 1.5;
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+  /*font-weight: 500;*/
+  /*letter-spacing: -.05rem;*/
+  /*line-height: 1.5;*/
 }
 
 .active {
-  background-color:#f4511e;
-  color:white;
+  /*background-color:#f4511e;*/
+  /*color:white;*/
+  background-color: white;
+  color: black;
   cursor: pointer;
   padding: 10px;
   width: 100%;
   height: 7%;
-  border: none;
+  border: 2px solid;
   text-align: left;
   outline: none;
-  font-size: 1.7rem;
-  font-weight: 500;
-  letter-spacing: -.05rem;
-  line-height: 1.5;
+  font-size: 1.25rem;
+  /*font-weight: 500;*/
+  /*letter-spacing: -.05rem;*/
+  /*line-height: 1.5;*/
 }
 
 .collapsible:hover {
@@ -337,10 +342,10 @@ li .fa, li .fab {
   height: 7%;
   text-align: left;
   outline: none;
-  font-size: 1.7rem;
-  font-weight: 500;
-  letter-spacing: -.05rem;
-  line-height: 1.5;
+  font-size: 1.25rem;
+  /*font-weight: 500;*/
+  /*letter-spacing: -.05rem;*/
+  /*line-height: 1.5;*/
 }
 
 .collapsible:after {
@@ -361,10 +366,10 @@ li .fa, li .fab {
   height: 7%;
   text-align: left;
   outline: none;
-  font-size: 1.7rem;
-  font-weight: 500;
-  letter-spacing: -.05rem;
-  line-height: 1.5;
+  font-size: 1.25rem;
+  /*font-weight: 500;*/
+  /*letter-spacing: -.05rem;*/
+  /*line-height: 1.5;*/
 }
 
 .active:after {
@@ -376,7 +381,7 @@ li .fa, li .fab {
   padding: 10px;
   display: none;
   overflow: scroll;
-  height: 500px;
+  height: 350px;
 }
 
 .pubs {
