--- a/css/main.css
+++ b/css/main.css
@@ -109,14 +109,35 @@ img[alt=Picture description] { width: 200px; }
   padding: 15px;
 }
 
+[class*="col-"] {
+  width: 100%;
+}
+
+
 /* For desktop: */
+/*
 .col-1 {width: 45%;}
 .col-2 {width: 45%;}
+*/
 
 /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
+/*
 @media only screen and (max-width: 768px) {
   [class*="col-"] {
     width: 100%;
   }
 
+}
+*/
+
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .col-s-1 {width: 100%;}
+  .col-s-2 {width: 100%;}
+}
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 45%;}
+  .col-2 {width: 45%;}
 }
