--- a/css/typography.css
+++ b/css/typography.css
@@ -8,6 +8,10 @@ p, .serif {
     font-family: "Cardo", Georgia, serif;
 }
 
+span, .serif {
+    font-family: "Cardo", Georgia, serif;
+}
+
 h1,
 h2,
 h3,
