--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ p:-moz-only-whitespace, li:-moz-only-whitespace, div:-moz-only-whitespace, secti
 /* Page Variables */
 
 :root {
-    --main-width: 65%;
+    --main-width: 75%;
     --sidebar-width: calc(100% - var(--main-width));
 }
 
@@ -107,12 +107,12 @@ li + li {
     margin-top: 0.4em;
 }
 
-.fa, .fab {
+.fa, .fab, .ai {
     text-align: center;
     min-width: 1em;
 }
 
-li .fa, li .fab {
+li .fa, li .fab, li .ai {
     margin-right: 0.3em;
 }
 
@@ -313,6 +313,8 @@ li .fa, li .fab {
   /*font-weight: 500;*/
   /*letter-spacing: -.05rem;*/
   /*line-height: 1.5;*/
+  font-size: 1.25rem;
+  width: 100%;
 }
 
 .active {
@@ -331,6 +333,7 @@ li .fa, li .fab {
   /*font-weight: 500;*/
   /*letter-spacing: -.05rem;*/
   /*line-height: 1.5;*/
+  width: 100%;
 }
 
 .collapsible:hover {
@@ -346,6 +349,7 @@ li .fa, li .fab {
   /*font-weight: 500;*/
   /*letter-spacing: -.05rem;*/
   /*line-height: 1.5;*/
+  width: 100%;
 }
 
 .collapsible:after {
@@ -370,6 +374,7 @@ li .fa, li .fab {
   /*font-weight: 500;*/
   /*letter-spacing: -.05rem;*/
   /*line-height: 1.5;*/
+  width: 100%;
 }
 
 .active:after {
@@ -382,6 +387,7 @@ li .fa, li .fab {
   display: none;
   overflow: scroll;
   height: 350px;
+  width: 100%;
 }
 
 .pubs {
@@ -403,6 +409,7 @@ li .fa, li .fab {
   color: black;
   background-color: white;
   border: 2px solid #f44336;
+  width: 100%;
 }
 
 .cvbutton:hover {background-color: white}
