--- a/css/styles.css
+++ b/css/styles.css
@@ -64,8 +64,9 @@ nav ul, footer ul {
     font-weight: bold;
 }
 nav ul li, footer ul li {
-    display: inline;
+    display: inline-block;
     margin-right: 20px;
+    width: 100%;
 }
 
 nav {
@@ -425,3 +426,25 @@ li .fa, li .fab, li .ai {
   transform: translateY(4px);
 }
 
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .col-s-1 {width: 100%;}
+  .col-s-2 {width: 100%;}
+
+  nav ul li, footer ul li {
+      display: inline;
+      margin-right: 20px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 40%;}
+  .col-2 {width: 60%;}
+
+  nav ul li, footer ul li {
+      display: inline;
+      margin-right: 20px;
+  }
+
+}
