Mostly consistent fonts; CV mobile aware.

--- a/css/typography.css
+++ b/css/typography.css
@@ -4,6 +4,7 @@ body, .sanserif {
     font-family: "Montserrat", "Trebuchet MS", Helvetica, sans-serif;
 }
 
+/*
 p, .serif {
     font-family: "Cardo", Georgia, serif;
 }
@@ -11,6 +12,7 @@ p, .serif {
 span, .serif {
     font-family: "Cardo", Georgia, serif;
 }
+*/
 
 h1,
 h2,
