--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,18 @@
     transform-origin: 0px 0px 0px;
 }
 
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+}
+
 p:blank, li:blank, div:blank, section:blank {
     display: none;
 }
@@ -48,11 +60,6 @@ body {
 body {
     margin: 60px auto;
     width: 70%;
-}
-
-#save > section:first-of-type {
-    display: flex;
-    flex-direction: row;
 }
 
 /* Misc */
@@ -121,65 +128,6 @@ li .fa, li .fab, li .ai {
     margin-right: 0.3em;
 }
 
-/* Page layout */
-
-#save > section:first-of-type > aside {
-    flex-basis: var(--sidebar-width);
-    padding: 0.1618in 0 0.1618in 0.1618in;
-    display: flex;
-    flex-direction: column;
-}
-
-#save > section:first-of-type > aside > section + section {
-    margin-top: 2em;
-}
-
-#save > section:first-of-type > aside > section:last-child {
-    margin-top: auto;
-} 
-
-#save > section:first-of-type > section {
-    flex-basis: var(--main-width);
-    display: flex;
-    flex-direction: column;
-    padding-left: 0.1618in;
-}
-
-#save > section:first-of-type > section > header {
-    flex-basis: var(--header-height);
-    flex-grow: 0;
-    padding: 0.1618in;
-}
-
-#save > section:first-of-type > section > section {
-    flex-grow: 1;
-    padding: 0.1618in;
-    display: flex;
-    flex-direction: column;
-}
-
-#save > section:first-of-type > section > section > section + section {
-    margin-top: 2em;
-}
-
-#save > section:first-of-type > section > section > section:last-child {
-    margin-top: auto;
-}
-
-.references address {
-    font-style: normal;
-    font-weight: 300;
-}
-
-.references address:first-line {
-    font-weight: 400;
-}
-
-.references address + address,
-.references address + p {
-    padding-top: 0.5em;
-}
-
 /* Skills */
 
 .skills > ul:after {
@@ -227,11 +175,7 @@ li .fa, li .fab, li .ai {
     margin: 0;
     padding: 0;
     flex-basis: 100%;
-    font-weight: 300;
-}
-
-.education ol > li {
-    font-weight: 300;
+    /*font-weight: 300;*/
 }
 
 .experience ol > li + li, 
@@ -250,6 +194,7 @@ li .fa, li .fab, li .ai {
     flex-direction: row;
 }
 
+/*
 .experience ol > li > span,
 .education ol > li p,
 .content ol > li p,
@@ -261,12 +206,15 @@ li .fa, li .fab, li .ai {
 .experience ol > li header p {
     font-weight: 400;
 }
+*/
 
+/*
 .experience ol > li header p,
 .pubs ol > li header p,
 .content ol > li header p {
     font-size: 110%;
 }
+*/
 
 .education ol > li div > *:last-child,
 .content ol > li div > *:last-child,
@@ -392,7 +340,7 @@ li .fa, li .fab, li .ai {
   padding: 10px;
   display: none;
   overflow: scroll;
-  height: 350px;
+  min-height: 50px;
   width: 100%;
 }
 
