--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -1,57 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>{{ page.title }} | {{ site.title  }}</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1" />
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-    <meta name="google" content="notranslate" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- link to main stylesheet -->
-    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
-    <link rel="stylesheet" type="text/css" href="../css/typography.css" />
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/research">Research</a></li>
-        <li><a href="/publications">Publications</a></li>
-        <li><a href="/cv">CV</a></li>
-      </ul>
-    </nav>
-    {{ content  }}
+---
+layout: default
+---
+{%- assign _sections = site.experiences | sort: 'order' -%}
+{%- include header.html scrolly_nav=_sections -%}
 
-    <footer>
-    <ul>
-      <li><i class="fa fa-envelope" title="Email"></i><a href="mailto:dsondak@seas.harvard.edu">dsondak (at) seas.harvard.edu</a></li>
-      <li><i class="fab fa-github" title="GitHub"></i></i><a href="https://github.com/dsondak">github.com/dsondak</a></li>
-      <li><i class="ai ai-google-scholar"></i><a href="https://scholar.google.com/citations?user=ZYhKK1wAAAAJ&hl=en">google scholar</a></li>
-      <li><i class="fa fa-map-marker-alt" title="Location"></i><a href="https://goo.gl/maps/RYDWryHmctRp1RQ6A">Maxwell-Dworkin G111</a></li>
-    </ul>
-    </footer>
-
-    <script>
-    var coll = document.getElementsByClassName("collapsible");
-    var i;
-    
-    for (i = 0; i < coll.length; i++) {
-      coll[i].addEventListener("click", function() {
-        this.classList.toggle("active");
-        var content = this.nextElementSibling;
-        if (content.style.display === "block") {
-          content.style.display = "none";
-        } else {
-          content.style.display = "block";
-        }
-      });
-    }
-
-    </script>
-
-
-  </body>
-</html>
+<!-- Main -->
+<div id="main">
+	<article class="shade-two">
+	{%- if page.content != "" -%}
+		{%- include section.html title=page.title auto-header=page.auto-header content=page.content -%}
+	{%- endif -%}
+	<!-- Sections -->
+	{%- for _section in _sections -%}
+		{%- include section.html title=_section.title auto-header=_section.auto-header content=_section.content -%}
+	{%- endfor -%}
+	</article>
+</div>
