--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,39 +1,14 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+Prologue by HTML5 UP
+html5up.net | @ajlkn
+Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+Jekyll integration by Chris Bobbe | chrisbobbe.github.io
+-->
 <html>
-  <head>
-    <title>{{ page.title }} | {{ site.title  }}</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1" />
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-    <meta name="google" content="notranslate" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- link to main stylesheet -->
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/typography.css" />
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/research">Research</a></li>
-        <li><a href="/publications">Publications</a></li>
-        <li><a href="/cv">CV</a></li>
-      </ul>
-    </nav>
-    <div class="container">
-
-      {{ content  }}
-
-    </div><!-- /.container -->
-    <footer>
-    <ul>
-      <li><i class="fa fa-envelope" title="Email"></i><a href="mailto:dsondak@seas.harvard.edu">dsondak (at) seas.harvard.edu</a></li>
-      <li><i class="fab fa-github" title="GitHub"></i></i><a href="https://github.com/dsondak">github.com/dsondak</a></li>
-      <li><i class="ai ai-google-scholar"></i><a href="https://scholar.google.com/citations?user=ZYhKK1wAAAAJ&hl=en">google scholar</a></li>
-      <li><i class="fa fa-map-marker-alt" title="Location"></i><a href="https://goo.gl/maps/RYDWryHmctRp1RQ6A">Maxwell-Dworkin G111</a></li>
-    </ul>
-    </footer>
-  </body>
+	{%- include head.html -%}
+	<body>
+		{{- content -}}
+		{%- include footer.html -%}
+	</body>
 </html>
